test/bootstrap/errors/miscompilation-03/miscompilation-03.foster

type case Bytes
  of $BytesEmpty
  of $BytesConcat   Bytes Bytes  Int64
;

main = { () };

bytesDrop :: { Bytes => Int64 => Bytes };
bytesDrop = { ba => n =>
    case ba
      of $BytesConcat _ bc _ -> bytesDrop bc 0
      of _                   -> BytesEmpty
    end
};
